[package]
name = "wallowa-duckdb"
description = "A crate to compile the DuckDB dependency separately to keep compile times lower on the main crate."
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
duckdb = { version = "0.9", features = ["json", "chrono", "r2d2", "serde_json", "extensions-full", "vtab-loadable", "num"] }
r2d2 = "0.8"
tracing = "0.1"
